MINGW-w64: CMake fails to build for 32bits
It is because of this commit: aafa392c @kanje
It failed with both gcc and clang.
Error message from gcc-11:
g++ -march=pentium4 -mtune=generic -O2 -pipe -ID:/M/msys64/mingw32/include -DCMAKE_BOOTSTRAP -DCMake_HAVE_CXX_MAKE_UNIQUE=1 -I/C/_/mingw-w64-cmake/src/build-MINGW32/Bootstrap.cmk -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/LexerParser -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Utilities/std -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Utilities -c /C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx -o cmTimestamp.o
C:/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx: In lambda function:
C:/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx:208:12: internal compiler error: Segmentation fault
208 | return strftime;
| ^~~~~~~~
C:/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx:208:12: internal compiler error: Aborted
g++.exe: internal compiler error: Aborted signal terminated program cc1plus
Please submit a full bug report,
with preprocessed source if appropriate.
See <https://github.com/msys2/MINGW-packages/issues> for instructions.
Error message from clang-13
clang++ -march=pentium4 -mtune=generic -O2 -pipe -ID:/M/msys64/clang32/include -DCMAKE_BOOTSTRAP -DCMake_HAVE_CXX_MAKE_UNIQUE=1 -I/C/_/mingw-w64-cmake/src/build-CLANG32/Bootstrap.cmk -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/LexerParser -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Utilities/std -I/C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Utilities -c /C/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx -o cmTimestamp.o
C:/_/mingw-w64-cmake/src/cmake-3.22.0-rc2/Source/cmTimestamp.cxx:208:5: error: return type 'unsigned int (*)(char *, unsigned int, const char *, const tm *)' must match previous return type 'unsigned int (*)(char *, unsigned int, const char *, const tm *) __attribute__((stdcall))' when lambda expression has unspecified explicit return type
return strftime;
^
1 error generated.
make: *** [Makefile:396: cmTimestamp.o] Error 1
Edited by Brad King